--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: python
-services: elasticsearch
 python:
   - "3.6"
 install:
   - pip install -e .[dev]
 script:
   - nosetests
+before_script:
+  - wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
+  - echo "deb https://artifacts.elastic.co/packages/6.x/apt stable main" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y elasticsearch
+  - sudo systemctl start elasticsearch.service
+  - until $(curl --output /dev/null --silent --head --fail http://localhost:9200); do printf '.'; sleep 1; done
