--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - pip install -e .[dev]
 script:
-  - nosetests --cover-package=amcat4
+  - nosetests --cover-package=amcat4  --with-coverage --cover-xml
   - codecov
 before_script:
   - wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
