--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ install:
 script:
   - nosetests --cover-package=amcat4  --with-coverage --cover-xml
   - codecov
+# (following https://docs.travis-ci.com/user/database-setup/#elasticsearch)
+before_install:
+  - curl https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.11.1-amd64.deb -o elasticsearch.deb
+  - sudo dpkg -i --force-confnew elasticsearch.deb
+  - sudo chown -R elasticsearch:elasticsearch /etc/default/elasticsearch
+  - sudo service elasticsearch restart
 before_script:
-  - wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
-  - echo "deb https://artifacts.elastic.co/packages/6.x/apt stable main" | sudo tee -a /etc/apt/sources.list
-  - sudo apt-get update -qq
-  - sudo apt-get install -y elasticsearch
-  - sudo /etc/init.d/elasticsearch start
-  - until $(curl --output /dev/null --silent --head --fail http://localhost:9200); do printf '.'; sleep 1; done
+  - sleep 10
