--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -24,6 +24,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Configure sysctl limits
+      run: |
+      sudo swapoff -a
+      sudo sysctl -w vm.swappiness=1
+      sudo sysctl -w fs.file-max=262144
+      sudo sysctl -w vm.max_map_count=262144
+    - name: Runs Elasticsearch
+      uses: elastic/elastic-github-actions/elasticsearch@master
+      with:
+      stack-version: 7.6.0
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
