--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -e .[dev]
-        pip install flake8
+        pip install flake8 mypy
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
