--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-  
+
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -38,6 +38,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
-    - name: Test with nose
+    - name: Test with pytest
       run: |
-        nosetests
+        pytest
