--- a/mypy.ini
+++ b/mypy.ini
@@ -14,3 +14,6 @@ ignore_missing_imports = True
 
 [mypy-amcat4annotator.*]
 ignore_missing_imports = True
+
+[mypy-authlib.*]
+ignore_missing_imports = True
