--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ nosetests.xml
 .project
 .pydevproject
 
-# Emacs meuk 
+# Emacs meuk
 *~
 \#*\#
 .\#*
@@ -71,3 +71,4 @@ annotator.db
 coverage.xml
 venv/
 
+testme.db
