Move to elasticsearch 8 python client (should still support elasticsearch 7 server)

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,29 @@
-# Example .env file for amcat4
-# You can generate a .env file with
-# python -m amcat4 --create-env
-# For example, to set both an override admin email and password, use:
-# python -m amcat4 --create-env -m admin@example.com -p secret_admin_password
-
-# Location of a .env file (if used) relative to working directory
-amcat4_env_file=.env
-
 # Host this instance is served at (needed for checking tokens)
 amcat4_host=http://localhost:5000
 
-# Elasticsearch host
+# Elasticsearch password. This the password for the 'elastic' user when Elastic xpack security is enabled
+#amcat4_elastic_password=
+
+# Elasticsearch host. Default: https://localhost:9200 if elastic_password is set, http://localhost:9200 otherwise
 amcat4_elastic_host=http://localhost:9200
 
-# Elasticsearch index to store authorization information in
-amcat4_system_index=amcat4_system
+# Elasticsearch verify SSL (only used if elastic_password is set). Default: True unless host is localhost)
+amcat4_elastic_verify_ssl=False
+
+# Do we require authorization?
+# Valid options:
+# - no_auth: everyone (that can reach the server) can do anything they want
+# - allow_guests: everyone can use the server, dependent on index-level guest_role authorization settings
+# - allow_authenticated_guests: everyone can use the server, if they have a valid middlecat login, and dependent on index-level guest_role authorization settings
+# - authorized_users_only: only people with a valid middlecat login and an explicit server role can use the server
+amcat4_auth=no_auth
 
 # Middlecat server to trust as ID provider
 amcat4_middlecat_url=https://middlecat.up.railway.app
 
-# Password for a global admin user (useful for setup and recovery)
-amcat4_admin_password=
-
 # Email address for a hardcoded admin email (useful for setup and recovery)
-amcat4_admin_email=
+#amcat4_admin_email=
 
-# Key used to create admin tokens. Set to a secret string in production if admin password is used!
-amcat4_secret_key=
+# Elasticsearch index to store authorization information in
+amcat4_system_index=amcat4_system
+
