--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-        elastic-version: ["7.17.8"]
+        elastic-version: ["8.6.1", "7.17.8"]
 
     steps:
       - uses: actions/checkout@v2
