--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -34,6 +34,7 @@ jobs:
         uses: elastic/elastic-github-actions/elasticsearch@master
         with:
           stack-version: ${{ matrix.elastic-version }}
+          security-enabled: false
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
