--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         elastic-version: ["8.6.1", "7.17.8"]
 
     steps:
@@ -41,4 +41,4 @@ jobs:
           pip install -e .[dev]
       - name: Test with pytest
         run: |
-          pytest
+          python -m pytest tests
