--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,7 @@ nosetests.xml
 # PyCharm meuk
 .idea
 
-# vscode meuk
-#.vscode
+# vscode meuk (only include extensions and settings)
 .vscode/*
 !.vscode/settings.json
 !.vscode/extensions.json
