--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true
   },
+
   "black-formatter.args": ["--line-length", "127"],
   "mypy.enabled": true,
   "mypy.runUsingActiveInterpreter": true,
   "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.autoImportCompletions": true
+  "python.analysis.autoImportCompletions": true,
+  "flake8.args": ["--max-line-length=127", "--ignore=E203"]
 }
