fixed some bugs in config_amcat

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ amcat4_elastic_verify_ssl=False
 amcat4_auth=no_auth
 
 # Middlecat server to trust as ID provider
-amcat4_middlecat_url=https://middlecat.up.railway.app
+amcat4_middlecat_url=https://middlecat.net
 
 # Email address for a hardcoded admin email (useful for setup and recovery)
 #amcat4_admin_email=
