wip. rewriting multimedia to boto3

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,8 @@ amcat4_host=http://localhost:5000
 
 # Elasticsearch password. This the password for the 'elastic' user when Elastic xpack security is enabled
 #amcat4_elastic_password=
-
 # Elasticsearch host. Default: https://localhost:9200 if elastic_password is set, http://localhost:9200 otherwise
 amcat4_elastic_host=http://localhost:9200
-
 # Elasticsearch verify SSL (only used if elastic_password is set). Default: True unless host is localhost)
 amcat4_elastic_verify_ssl=False
 
@@ -15,7 +13,6 @@ amcat4_elastic_verify_ssl=False
 # - no_auth: everyone (that can reach the server) can do anything they want
 # - allow_guests: everyone can use the server, dependent on index-level guest_role authorization settings
 # - allow_authenticated_guests: everyone can use the server, if they have a valid middlecat login, and dependent on index-level guest_role authorization settings
-# - authorized_users_only: only people with a valid middlecat login and an explicit server role can use the server
 amcat4_auth=no_auth
 
 # Middlecat server to trust as ID provider
@@ -27,3 +24,6 @@ amcat4_middlecat_url=https://middlecat.net
 # Elasticsearch index to store authorization information in
 amcat4_system_index=amcat4_system
 
+# S3 (SeaweedFS)
+amcat4_s3_access_key=DEV_S3_ACCESS_KEY_ID
+amcat4_s3_secret_key=DEV_S3_SECRET_ACCESS_KEY
