--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,9 @@ amcat4_middlecat_url=https://middlecat.net
 #amcat4_admin_email=
 
 # Elasticsearch index to store authorization information in
-amcat4_system_index=amcat4_system
+amcat4_prefix=amcat4_system
 
 # S3 (SeaweedFS)
-amcat4_s3_access_key=DEV_S3_ACCESS_KEY_ID
-amcat4_s3_secret_key=DEV_S3_SECRET_ACCESS_KEY
+# Uncomment if you use file storage
+# amcat4_s3_access_key=DEV_S3_ACCESS_KEY
+# amcat4_s3_secret_key=DEV_S3_SECRET_KEY
