--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,6 @@ system_index=amcat4_system
 
 # S3 (SeaweedFS)
 # Uncomment if you use file storage
+# amcat4_s3_host=http://localhost:8333
 # amcat4_s3_access_key=DEV_S3_ACCESS_KEY
 # amcat4_s3_secret_key=DEV_S3_SECRET_KEY
