--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "services:wait": "wait-on tcp:9200 tcp:8333",
     "// Dev scripts": "",
     "dev:install": "pnpm install:frontend && pnpm install:backend",
-    "dev:config": "./backend/env/bin/python -m amcat4 config -d -e backend/.env",
+    "dev:config": "./backend/env/bin/python -m amcat4 config -d",
     "dev:startup": "pnpm services:up",
     "dev": "pnpm start",
     "dev:shutdown": "pnpm services:stop"
