forgot to stage

--- a/package.json
+++ b/package.json
@@ -5,19 +5,16 @@
     "// Helpers: Install and start vite (frontened) and backend (fastapi)": "",
     "install:frontend": "pnpm -C frontend install",
     "install:backend": "python3 -m venv backend/env && ./backend/env/bin/pip install -e ./backend[dev]",
+    "build:frontend": "pnpm -C frontend build",
     "start:web": "pnpm -C frontend dev",
     "start:api": "./backend/env/bin/python -m amcat4 run",
-    "start": "concurrently -k -n \"web,api\" -c \"cyan,green\" \"pnpm start:api\" \"pnpm start:web\"",
-    "// Helpers: Install and start elasticsearch (db) and seaweedfs (s3)": "",
-    "services:up": "docker compose -f dev/docker-compose.yml up -d",
-    "services:stop": "docker compose -f dev/docker-compose.yml stop",
-    "services:wait": "wait-on tcp:9200 tcp:8333",
+    "start": "concurrently -k -n \"api,web\" -c \"cyan,green\" \"pnpm start:api\" \"pnpm start:web\"",
     "// Dev scripts": "",
     "dev:install": "pnpm install:frontend && pnpm install:backend",
     "dev:config": "./backend/env/bin/python -m amcat4 config -d",
-    "dev:startup": "pnpm services:up",
     "dev": "pnpm start",
-    "dev:shutdown": "pnpm services:stop"
+    "// Test scripts": "",
+    "test:backend": "./backend/env/bin/pytest"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
