--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "amcat4client",
   "version": "4.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "dev:ts": "npm run dev & npm run ts:watch",
@@ -94,6 +95,7 @@
     "globals": "^17.3.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "rollup-plugin-visualizer": "^7.0.0",
     "ts-prune": "^0.10.3",
     "typescript-eslint": "^8.56.0"
   }
