--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "// Helpers: Install and start vite (frontened) and backend (fastapi)": "",
     "install:frontend": "pnpm -C frontend install",
-    "install:backend": "python3 -m venv backend/env && ./backend/env/bin/pip install -e ./backend[dev]",
+    "install:backend": "uv sync --project ./backend",
     "build:frontend": "pnpm -C frontend build",
     "start:web": "pnpm -C frontend dev",
-    "start:api": "./backend/env/bin/python -m amcat4 run",
+    "start:api": "uv run --project ./backend amcat4 run",
     "start": "concurrently -k -n \"api,web\" -c \"cyan,green\" \"pnpm start:api\" \"pnpm start:web\"",
     "// Dev scripts": "",
-    "dev:install": "pnpm install:frontend && pnpm install:backend",
-    "dev:config": "./backend/env/bin/python -m amcat4 config -d",
+    "dev:install": "pnpm install && pnpm install:frontend && pnpm install:backend",
+    "dev:config": "uv run --project ./backend amcat4 config -d",
     "dev": "pnpm start",
     "// Test scripts": "",
     "test:backend": "./backend/env/bin/pytest"
