--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   caddy:
-    image: caddy:2-alpine
+    build:
+      context: ..
+      dockerfile: production/Katty.Dockerfile
     container_name: katty
     restart: unless-stopped
     ports:
@@ -9,24 +11,12 @@ services:
     environment:
       - AMCAT4_URL=${AMCAT4_URL:-http://localhost}
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
-      # Mount the built frontend files from the shared volume
-      - frontend_build:/srv
     networks:
       - amcat-net
     depends_on:
       - api
-
-  frontend_builder:
-    # image: ccsamsterdam/amcat4_frontend:${AMCAT4_VERSION:-4.1.1}
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
-    volumes:
-      - frontend_build:/app/dist # Copies built files into the shared volume
-
   api:
     # image: ccsamsterdam/amcat4_backend:${AMCAT4_VERSION:-4.1.1}
     build:
@@ -39,6 +29,14 @@ services:
     environment:
       - amcat4_elastic_host=http://elastic8:9200
       - amcat4_host=${AMCAT4_API:-http://localhost/api}
+      - FORWARDED_ALLOW_IPS=*
+      # Passthrough environment variables for the API configuration
+      - amcat4_elastic_password
+      - amcat4_elastic_verify_ssl
+      - amcat4_system_index
+      - amcat4_auth
+      - amcat4_middlecat_url
+      - amcat4_admin_email
       - FORWARDED_ALLOW_IPS=*
     depends_on:
       db:
