removed AMCAT4_API env, because this should now be identical to AMCAT4_URL

--- a/production/.env.example
+++ b/production/.env.example
@@ -14,18 +14,20 @@
 # Note: Make sure not to include a trailing slash!
 AMCAT4_URL=http://localhost
 
-# Where is the AmCAT API served?
-# If it's served by the docker it will be served at $AMCAT4_URL/api automatically, so no need to change it
-# But if you serve it yourself in development (e.g. at http://localhost:5000) you can specify it here
-AMCAT4_API=${AMCAT4_URL}/api
-
-# The nextjs server users the AMCAT4_SERVER_API variable to find the API from withint the docker network
-# If you run the API outside the docker, you can uncomment this to point the nextjs server to the same API URL as the web client
-# If you run the API in the docker, do not uncomment this line as otherwise the nextjs server will not be able to find the API
-# AMCAT4_SERVER_API=${AMCAT4_API}
-
 # Specify a cookie secret for the web client
 AMCAT4_COOKIE_SECRET=please replace me with the output of openssl rand -hex 32
+
+# Do we require authorization?
+# Valid options:
+# - no_auth: everyone (that can reach the server) can do anything they want
+# - allow_guests: everyone can use the server, dependent on index-level guest_role authorization settings
+# - allow_authenticated_guests: everyone can use the server, if they have a valid middlecat login, and dependent on index-level guest_role authorization settings
+# - authorized_users_only: only people with a valid middlecat login and an explicit server role can use the server
+amcat4_auth=no_auth
+
+# Set an email address for a hardcoded admin email (useful for setup and recovery)
+amcat4_admin_email=youremail@xample.com
+
 
 # Which compose file to use. If you want to build locally using the Dockerfiles, uncomment the next line
 # (Note that this should not be necessary unless you are contributing to the development of the docker images)
@@ -48,20 +50,8 @@ AMCAT4_COOKIE_SECRET=please replace me with the output of openssl rand -hex 32
 
 # amcat4_elastic_prefix=.amcat4.open.
 
-# Do we require authorization?
-# Valid options:
-# - no_auth: everyone (that can reach the server) can do anything they want
-# - allow_guests: everyone can use the server, dependent on index-level guest_role authorization settings
-# - allow_authenticated_guests: everyone can use the server, if they have a valid middlecat login, and dependent on index-level guest_role authorization settings
-# - authorized_users_only: only people with a valid middlecat login and an explicit server role can use the server
-# amcat4_auth=no_auth
-
 # Middlecat server to trust as ID provider
 # amcat4_middlecat_url=https://middlecat.net
-
-# Set an email address for a hardcoded admin email (useful for setup and recovery)
-# amcat4_admin_email=youremail@xample.com
-
 
 # # Elastic settings
 
