/api prefix in fastapi

--- a/production/Caddyfile
+++ b/production/Caddyfile
@@ -1,10 +1,10 @@
 {$AMCAT4_URL:localhost} {
     # API - Proxy to the FastAPI container
 
-    handle_path /api {
+    handle /api {
         reverse_proxy api:5000
     }
-    handle_path /api/* {
+    handle /api/* {
         reverse_proxy api:5000
     }
 
